-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.2.0-beta1
-
None
if I drag and drop items from the item library to the navigator view sometimes not completly sure when I get for example:
--------------------------- Warning --------------------------- Reparenting the component flipable2 here will cause the component flipable2 to be deleted. Do you want to proceed? --------------------------- OK Cancel ---------------------------
and if click "ok" on this messagebox the QtCreator is crashing/throwing an exception in:
NodeAbstractProperty ModelNode::parentProperty() const { if (!isValid()) { Q_ASSERT_X(isValid(), Q_FUNC_INFO, "model node is invalid"); throw InvalidModelNodeException(__LINE__, __FUNCTION__, __FILE__); }
with trace:
0 RaiseException KERNELBASE 0x7590c42d 1 _CxxThrowException MSVCR100D 0x6bf2cf82 2 QmlDesigner::ModelNode::parentProperty modelnode.cpp 298 0x51ac2b7f 3 QmlDesigner::reparentModelNodeToNodeProperty navigatortreemodel.cpp 626 0x51bee9e1 4 QmlDesigner::NavigatorTreeModel::moveNodesInteractive navigatortreemodel.cpp 660 0x51bee609 5 QmlDesigner::NavigatorTreeModel::handleItemLibraryItemDrop navigatortreemodel.cpp 716 0x51bef7c0 6 QmlDesigner::NavigatorTreeModel::dropMimeData navigatortreemodel.cpp 234 0x51bea8fc 7 QAbstractItemView::dropEvent qabstractitemview.cpp 2054 0x62b3937e 8 QWidget::event qwidget.cpp 8164 0x6288125c 9 QFrame::event qframe.cpp 534 0x629e68c2 10 QAbstractScrollArea::viewportEvent qabstractscrollarea.cpp 1194 0x62a8b7d4 11 QAbstractItemView::viewportEvent qabstractitemview.cpp 1690 0x62b37ccb 12 QTreeView::viewportEvent qtreeview.cpp 1299 0x62b8476e 13 QAbstractScrollAreaPrivate::viewportEvent qabstractscrollarea_p.h 110 0x6281c8f8 14 QAbstractScrollAreaFilter::eventFilter qabstractscrollarea_p.h 126 0x62a8d8c9 15 QCoreApplicationPrivate::sendThroughObjectEventFilters qcoreapplication.cpp 1031 0x622e0353 16 QApplicationPrivate::notify_helper qapplication.cpp 3518 0x62833f22 17 QApplication::notify qapplication.cpp 3305 0x62832f3e 18 QCoreApplication::notifyInternal qcoreapplication.cpp 935 0x622e00c4 19 QCoreApplication::sendSpontaneousEvent qcoreapplication.h 240 0x623f6778 20 QWidgetWindow::handleDropEvent qwidgetwindow.cpp 711 0x628b7982 21 QWidgetWindow::event qwidgetwindow.cpp 220 0x628b5e89 22 QApplicationPrivate::notify_helper qapplication.cpp 3522 0x62833f3e 23 QApplication::notify qapplication.cpp 2975 0x62831a98 24 QCoreApplication::notifyInternal qcoreapplication.cpp 935 0x622e00c4 25 QCoreApplication::sendEvent qcoreapplication.h 237 0x622e57a9 26 QGuiApplicationPrivate::processDrop qguiapplication.cpp 2598 0x68c7c3c5 27 QWindowSystemInterface::handleDrop qwindowsysteminterface.cpp 604 0x68c5c60c 28 QWindowsOleDropTarget::Drop qwindowsdrag.cpp 782 0x61e58a70 29 CPrivDragDrop::PrivDragDrop getif.cxx 960 0x75fe2b79 30 PrivDragDrop getif.cxx 1099 0x75fe2d78 31 CDropTarget::Drop drag.cpp 2492 0x75fba04d 32 CDragOperation::CompleteDrop drag.cpp 1601 0x75fb9ede 33 DoDragDrop drag.cpp 1964 0x75fba8dd 34 QWindowsDrag::drag qwindowsdrag.cpp 900 0x61e59018 35 QDragManager::drag qdnd.cpp 143 0x68c90aa8 36 QDrag::exec qdrag.cpp 282 0x68c8f78a 37 QDrag::exec qdrag.cpp 239 0x68c8f695 38 QmlDesigner::ItemLibraryWidget::startDragAndDrop itemlibrarywidget.cpp 395 0x51bd9e71 39 QmlDesigner::ItemLibraryWidget::qt_static_metacall moc_itemlibrarywidget.cpp 136 0x51c26474 40 QmlDesigner::ItemLibraryWidget::qt_metacall moc_itemlibrarywidget.cpp 195 0x51c266eb 41 QMetaObject::metacall qmetaobject.cpp 309 0x622eb640 42 CallMethod qv4qobjectwrapper.cpp 1131 0x5dd88718 43 CallPrecise qv4qobjectwrapper.cpp 1383 0x5dd884cf 44 QV4::QObjectMethod::callInternal qv4qobjectwrapper.cpp 1872 0x5dd881dd 45 QV4::QObjectMethod::call qv4qobjectwrapper.cpp 1802 0x5dd87e06 46 QV4::Object::call qv4object_p.h 270 0x5db6465c 47 QV4::Runtime::callProperty qv4runtime.cpp 938 0x5dd9db2a 48 0x7c80a29 49 QV4::SimpleScriptFunction::call qv4functionobject.cpp 529 0x5dd2dedf 50 QV4::Object::call qv4object_p.h 270 0x5db6465c 51 QQmlJavaScriptExpression::evaluate qqmljavascriptexpression.cpp 166 0x5de63f81 52 QQmlBoundSignalExpression::evaluate qqmlboundsignal.cpp 290 0x5ddf22e3 53 QQmlBoundSignal_callback qqmlboundsignal.cpp 417 0x5ddf27a6 54 QQmlNotifier::emitNotify qqmlnotifier.cpp 81 0x5de413ec 55 QQmlData::signalEmitted qqmlengine.cpp 720 0x5ddc06dc 56 QMetaObject::activate qobject.cpp 3567 0x62331adf 57 QMetaObject::activate qobject.cpp 3546 0x62331a21 58 QQuickMouseArea::pressed moc_qquickmousearea_p.cpp 510 0x5c22f06b 59 QQuickMouseArea::setPressed qquickmousearea.cpp 1121 0x5c13c938 60 QQuickMouseArea::mousePressEvent qquickmousearea.cpp 655 0x5c13afbf 61 QQuickItem::event qquickitem.cpp 7091 0x5c0757b5 62 QApplicationPrivate::notify_helper qapplication.cpp 3522 0x62833f3e 63 QApplication::notify qapplication.cpp 2975 0x62831a98 64 QCoreApplication::notifyInternal qcoreapplication.cpp 935 0x622e00c4 65 QCoreApplication::sendEvent qcoreapplication.h 237 0x622e57a9 66 QQuickWindow::sendEvent qquickwindow.cpp 2382 0x5c090f61 67 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1436 0x5c08d8b5 68 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 69 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 70 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 71 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 72 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 73 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 74 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 75 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 76 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 77 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 78 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 79 QQuickWindowPrivate::deliverInitialMousePressEvent qquickwindow.cpp 1425 0x5c08d7ed 80 QQuickWindowPrivate::deliverMouseEvent qquickwindow.cpp 1456 0x5c08d9f8 81 QQuickWindow::mousePressEvent qquickwindow.cpp 1491 0x5c08db29 82 QQuickWidget::mousePressEvent qquickwidget.cpp 967 0x59399563 83 QWidget::event qwidget.cpp 7962 0x62880ab9 84 QQuickWidget::event qquickwidget.cpp 1039 0x593997cd 85 QApplicationPrivate::notify_helper qapplication.cpp 3522 0x62833f3e 86 QApplication::notify qapplication.cpp 3089 0x62832054 87 QCoreApplication::notifyInternal qcoreapplication.cpp 935 0x622e00c4 88 QCoreApplication::sendSpontaneousEvent qcoreapplication.h 240 0x623f6778 89 QApplicationPrivate::sendMouseEvent qapplication.cpp 2562 0x62830f85 90 QWidgetWindow::handleMouseEvent qwidgetwindow.cpp 507 0x628b6ca7 91 QWidgetWindow::event qwidgetwindow.cpp 180 0x628b5df1 92 QApplicationPrivate::notify_helper qapplication.cpp 3522 0x62833f3e 93 QApplication::notify qapplication.cpp 2975 0x62831a98 94 QCoreApplication::notifyInternal qcoreapplication.cpp 935 0x622e00c4 95 QCoreApplication::sendSpontaneousEvent qcoreapplication.h 240 0x623f6778 96 QGuiApplicationPrivate::processMouseEvent qguiapplication.cpp 1715 0x68c78fcd 97 QGuiApplicationPrivate::processWindowSystemEvent qguiapplication.cpp 1516 0x68c78719 98 QWindowSystemInterface::sendWindowSystemEvents qwindowsysteminterface.cpp 579 0x68c5c551 99 QWindowsGuiEventDispatcher::sendPostedEvents qwindowsguieventdispatcher.cpp 89 0x61e30321 100 qt_internal_proc qeventdispatcher_win.cpp 423 0x623784b7 101 InternalCallWinProc USER32 0x76d362fa 102 UserCallWinProcCheckWow USER32 0x76d36d3a 103 DispatchMessageWorker USER32 0x76d377c4 104 DispatchMessageW USER32 0x76d3788a 105 QEventDispatcherWin32::processEvents qeventdispatcher_win.cpp 757 0x62379613 106 QWindowsGuiEventDispatcher::processEvents qwindowsguieventdispatcher.cpp 80 0x61e3023c 107 QEventLoop::processEvents qeventloop.cpp 137 0x622dcc8c 108 QEventLoop::exec qeventloop.cpp 212 0x622dcdf2 109 QCoreApplication::exec qcoreapplication.cpp 1188 0x622e0622 110 QGuiApplication::exec qguiapplication.cpp 1451 0x68c784a8 111 QApplication::exec qapplication.cpp 2768 0x628314f9 112 main main.cpp 535 0x306df3 113 __tmainCRTStartup crtexe.c 555 0x30c2bf 114 mainCRTStartup crtexe.c 371 0x30c0ef 115 BaseThreadInitThunk kernel32 0x7712338a 116 __RtlUserThreadStart ntdll 0x77759f72 117 _RtlUserThreadStart ntdll 0x77759f45
| For Gerrit Dashboard: QTCREATORBUG-12599 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 88908,2 | QmlDesigner: Check if model has parent property | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |