QmlDesigner: Check if model has parent property

If you compare the parent property you must check if there is one.

Task-number: QTCREATORBUG-12599
Change-Id: I6033a7572f307d2fd11e90c95cbb7515ef8dcca0
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>